# flutter_iconv

./: .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cxx/: CMakeLists.txt
android/src/main/kotlin/soko/ekibun/flutter_iconv/: FlutterIconvPlugin.kt
cxx/: ffi.cpp
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_iconv_example/: MainActivity.kt
example/android/app/src/main/kotlin/soko/ekibun/flutter_iconv_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: highlight.dart  main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_iconv.dart
test/: CMakeLists.txt  flutter_iconv_test.dart
windows/: CMakeLists.txt  flutter_iconv_plugin.cpp
windows/include/flutter_iconv/: flutter_iconv_plugin.h
